# rust_chat

./: .gitignore  Cargo.toml  client_config.toml  config.toml  server_config.toml
.github/workflows/: test-pr.yml
chat_client/: Cargo.toml
chat_client/src/: client.rs  error.rs  main.rs  types.rs  utils.rs
chat_client/src/config/: config.rs
chat_macro/: Cargo.toml
chat_macro/src/: lib.rs
chat_server/: Cargo.toml
chat_server/src/: error.rs  event_handler.rs  main.rs  server.rs  types.rs  util.rs  utils.rs  window.rs
chat_server/src/config/: config.rs
chat_server/src/protocols/: client.rs  server.rs
chat_shared/: Cargo.toml
chat_shared/src/: error.rs  lib.rs  types.rs  utils.rs
chat_shared/src/protocols/: client.rs  server.rs
notes/: compression.md  notes.md
