[package]
name = "chat_client"
version = "0.1.0"
edition = "2021"
authors = ["Phill030"]

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
machineid-rs = "1.2.4"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io-util", "rt"] }
toml = "0.8.0"
chat_shared = { path = "../chat_shared" }
