[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
authors = ["Phill030"]

[dependencies]
async-trait = "0.1.74"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io-util", "rt"] }
toml = "0.8.2"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
chat_shared = { path = "../chat_shared" }
rustls = "0.21.7"
chat_macro = { path = "../chat_macro" }
eframe = "0.23.0"
