[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
authors = ["Phill030"]

[dependencies]
async-trait = "0.1.74"
chat_shared = { path = "../chat_shared" }
chat_macro = { path = "../chat_macro" }
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io-util", "rt"] }
toml = "0.8.8"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
rustls = "0.21.9"
eframe = "0.23.0"
